Fixed scaling/panning for background upload on mobile.

--- a/frontend/edit_image.css
+++ b/frontend/edit_image.css
@@ -106,6 +106,14 @@
   position: fixed;
   z-index: 50;
 }
+@media (max-width:500px) {
+  #edit_background_modal {
+    position: unset;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+}
 #edit_background_title_bar {
   height: 4rem;
   display: flex;
@@ -149,6 +157,11 @@
   margin-bottom: 32px;
   
 /*  border-radius: 50%;*/
+}
+@media (max-width:1000px) {
+  #edit_background_image_container {
+    width: 100%;
+  }
 }
 
 /*#edit_background_draggable_image {
@@ -207,3 +220,11 @@
   width: 100%;
 }
 
+@media (max-width:500px) {
+  #edit_background_lens {
+    height: 114px;
+  }
+  #edit_background_image_container {
+    height: 120px;
+  }
+}
